hphp/hack/test/typecheck/expression_trees/splice_variable3.php.like_types.exp
File "splice_variable3.php", line 14, characters 5-19:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "splice_variable3.php", line 5, characters 25-53:
  But got `dynamic` because it is an unenforceable type
File "splice_variable3.php", line 15, characters 5-11:
Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "expr_tree.hhi", line 42, characters 41-79:
  But got `dynamic` because it is an unenforceable type
